fix overflow-y legend dashboard pie?

--- a/src/dashboard/Dashboard.css
+++ b/src/dashboard/Dashboard.css
@@ -87,7 +87,12 @@
 .legend_pie_wrapper {
   float: right;
   overflow-y: hidden;
+
 }
+.legend_pie_wrapper .trader_legend {
+    overflow-y: hidden;    
+  }
+
 
 .amChartsLegend
 {
